--- a/css/styles.css
+++ b/css/styles.css
@@ -122,21 +122,21 @@ table {
 .list > li:nth-child(1) > a {
 	background: url('../photos/home.svg') no-repeat;
 	background-size: 24px;
-	color: #eb6c11;	
+	color: white;	
 	background-position: left center;
 }
 
 .list > li:nth-child(2) > a {
 	background: url('../photos/gallery.svg') no-repeat;
 	background-size: 24px;	
-	color: #eb6c11;
+	color: white;
 	background-position: left center;
 }
 
 .list > li:nth-child(3) > a {
 	background: url('../photos/arrow-narrow-down.svg') no-repeat;
 	background-size: 24px;	
-	color: #eb6c11;
+	color: white;
 	background-position: right center;
 	padding-left: 0;
 }
